splinter Data.Propagator.Internal into smaller, safer modules

--- a/propagators.cabal
+++ b/propagators.cabal
@@ -43,6 +43,8 @@ library
 
   exposed-modules:
     Data.Propagator
+    Data.Propagator.Class
+    Data.Propagator.Cell
     Data.Propagator.Internal
 
   ghc-options: -Wall -fwarn-tabs
