--- a/propagators.cabal
+++ b/propagators.cabal
@@ -38,6 +38,7 @@ library
     base >= 4.8 && < 5,
     data-reify >= 0.6 && < 7,
     ghc-prim,
+    hashable >= 1.2 && < 1.3,
     intervals >= 0.7 && < 0.8,
     primitive >= 0.5 && < 0.7,
     unordered-containers >= 0.2 && < 0.3
@@ -46,6 +47,7 @@ library
     Data.Propagator
     Data.Propagator.Cell
     Data.Propagator.Class
+    Data.Propagator.Name
     Data.Propagator.Num
     Data.Propagator.Prop
     Data.Propagator.Supported
