--- a/propagators.cabal
+++ b/propagators.cabal
@@ -41,6 +41,7 @@ library
     hashable >= 1.2 && < 1.3,
     intervals >= 0.7 && < 0.8,
     primitive >= 0.5 && < 0.7,
+    unique >= 0 && < 0.1,
     unordered-containers >= 0.2 && < 0.3
 
   exposed-modules:
