hide some stuff under .Internal just to clear up what is the start of the public API

--- a/models.cabal
+++ b/models.cabal
@@ -45,13 +45,14 @@ library
     vector
 
   exposed-modules:
-    Model.Array
-    Model.Backoff
-    Model.Counted
-    Model.Deque
+    Model.Internal.Array
+    Model.Internal.Backoff
+    Model.Internal.Counted
+    Model.Internal.Deque
+    Model.Internal.Task
     Model.Observer
     Model.Par
-    Model.Task
+    Model.Subscription
 
   ghc-options: -Wall -fwarn-tabs
 
