--- a/models.cabal
+++ b/models.cabal
@@ -39,6 +39,7 @@ library
     base >= 4.8 && < 5,
     contravariant,
     exceptions,
+    fingertree,
     ghc-prim,
     mwc-random,
     primitive,
@@ -51,9 +52,11 @@ library
     Model.Internal.Deque
     Model.Internal.Fiber
     Model.Internal.Hole
+    Model.Internal.Log
     Model.Internal.PrimRef
     Model.Internal.Util
     Model.IVar
+    Model.Log
     Model.Observer
     Model.Par
     Model.Subscription
