--- a/propagators.cabal
+++ b/propagators.cabal
@@ -28,7 +28,7 @@ flag test-doctests
   default: True
   manual: True
 
--- You can disable the doctests test suite with -f-test-doctests
+-- You can disable the hlint test suite with -f-test-hlint
 flag test-hlint
   default: True
   manual: True
