--- a/propagators.cabal
+++ b/propagators.cabal
@@ -55,6 +55,11 @@ library
 
   ghc-options: -Wall -fwarn-tabs
 
+  -- hack around the buggy unused matches check for class associated types in ghc 8 rc1
+  if impl(ghc >= 8)
+    ghc-options: -fno-warn-unused-matches
+
+
   hs-source-dirs: src
   default-language: Haskell2010
 
