--- a/propagators.cabal
+++ b/propagators.cabal
@@ -1,8 +1,8 @@
+cabal-version: 3.6
 name:          propagators
 category:      Data
 version:       0
-license:       BSD3
-cabal-version: >= 1.22
+license:       BSD-3-Clause
 license-file:  LICENSE
 author:        Edward A. Kmett
 maintainer:    Edward A. Kmett <ekmett@gmail.com>
@@ -10,7 +10,7 @@ stability:     experimental
 homepage:      http://github.com/ekmett/propagators/
 bug-reports:   http://github.com/ekmett/propagators/issues
 copyright:     Copyright (C) 2015 Edward A. Kmett
-build-type:    Custom
+build-type:    Simple
 tested-with:   GHC == 7.10.2
 synopsis:      The Art of the Propagator
 description:   <http://web.mit.edu/~axch/www/art.pdf The Art of the Propagator>
@@ -38,9 +38,9 @@ library
     base >= 4.8 && < 5,
     data-reify >= 0.6 && < 7,
     ghc-prim,
-    hashable >= 1.2 && < 1.3,
+    hashable >= 1.2 && < 1.5,
     intervals >= 0.7 && < 0.9,
-    primitive >= 0.5 && < 0.7,
+    primitive >= 0.5 && < 0.8,
     unique >= 0 && < 0.1,
     unordered-containers >= 0.2 && < 0.3
 
@@ -52,6 +52,8 @@ library
     Data.Propagator.Num
     Data.Propagator.Prop
     Data.Propagator.Supported
+    Data.Propagator.Thunk
+    Data.Propagator.PProp
 
   ghc-options: -Wall -fwarn-tabs
 
