--- a/propagators.cabal
+++ b/propagators.cabal
@@ -57,3 +57,19 @@ library
 
   hs-source-dirs: src
   default-language: Haskell2010
+
+test-suite propagators-tests
+  main-is: Tests.hs
+  other-modules: Data.Propagator.Tests
+  hs-source-dirs: tests
+  ghc-options: -Wall -fwarn-tabs
+  default-language: Haskell2010
+  type: exitcode-stdio-1.0
+  build-depends:
+    base,
+    propagators,
+    HUnit,
+    test-framework             >= 0.8      && < 0.9,
+    test-framework-hunit       >= 0.3      && < 0.4,
+    test-framework-quickcheck2 >= 0.3      && < 0.4,
+    QuickCheck                 >= 2.5      && < 2.15
